<resources>
    <string name="app_name">华山导览</string>
    <string name="google_map_api_key">0vFXVLIl-WnXvtitHugo9gVnxhLnCwY6gACHk9Q</string>
    <string name="begin_tip">点击屏幕开始</string>
    <string name="title_name_guide">导览</string>
    <string name="tab_button_name_guide">导游</string>
    <string name="tab_button_name_map">地图</string>
    <string name="tab_button_name_weibo">分享</string>
    <string name="tab_button_name_sg">我的导览</string>
    <string name="tab_button_name_more">更多</string>
    <string name="tab_button_name_plan">我的计划</string>
    <string name="google_map_unuseable_tip">抱歉，您的手机尚未安装谷歌地图服务</string>
    <string name="grid_button_name_site">景点</string>
    <string name="grid_button_name_hotel">住宿</string>
    <string name="grid_button_name_restaurant">餐饮</string>
    <string name="tab_button_name_shop">商店</string>
    <string name="grid_button_name_shopping">购物</string>
    <string name="grid_button_name_fun">娱乐</string>
    <string name="grid_button_name_traffic">交通</string>
    <string name="grid_button_name_introduce">城市概览</string>
    <string name="grid_button_name_weather">天气</string>
    <string name="grid_button_name_favorite">我的最爱</string>
    <string name="grid_button_name_news">资 讯</string>
    <string name="grid_button_name_newsandhuabao">资讯和画报</string>
    <string name="grid_button_name_rate">汇率</string>
    <string name="grid_button_name_download">导览下载</string>
    <string name="search_hint_try">尝试：</string>
    <string name="check_all_text">全部:all</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_choice_firend">选择好友</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_comfirm">确定</string>
    <string name="weibo_tip_content_null">内容为空</string>
    <string name="album">相册</string>
    <string name="time_comment">次评价</string>
    <string name="cg_tab_text_site_guide">导游</string>
    <string name="cg_tab_text_site_address">信息</string>
    <string name="cg_tab_text_guide">概况</string>
    <string name="cg_tab_text_address">地址</string>
    <string name="cg_setting">设置</string>
    <string name="weibo_introduce">微博使用说明</string>
    <string name="comment_title_text">评星</string>
    <string name="comment_title_please">请为</string>
    <string name="comment_title_times">位用户评价过</string>
    <string name="comment_introduce">轻触爱心符号进行操作</string>
    <string name="comment_resend_introduce">点击重新评价按钮进行修改</string>
    <string name="favorite_delete_success">已从我的最爱中移除</string>
    <string name="favorite_add_success">已添加到我的最爱</string>
    <string name="cg_map_title_map">地图</string>
    <string name="cg_map_gallery_title">画报</string>
    <string name="mall_favorite">我的最爱</string>
    <string name="mall_floor">层</string>
    <string name="mall_map">地图</string>
    <string name="mall_more">更多</string>
    <string name="weibo_tip">是否将图片分享到新浪微博？</string>
    <string name="weibo_me_at">我在</string>
    <string name="weibo_news">分享@TouchChina旅行资讯</string>
    <string name="news_from_tc">【来自 @TouchChina】</string>
    <string name="weibo_cancel">取消</string>
    <string name="weibo_not_login">未登录</string>
    <string name="weibo_login">登 录 微 博</string>
    <string name="weibo_login_word">登录</string>
    <string name="weibo_remove_image">移除此图片?</string>
    <string name="weibo_exit">退出新浪微博?</string>
    <string name="weibo_login_error">用户名/密码错误，请重试。</string>
    <string name="weibo_login_success">登录成功</string>
    <string name="weibo_login_fail">登录失败</string>
    <string name="weibo_send_success">发送成功</string>
    <string name="weibo_send_fail">发送失败</string>
    <string name="weibo_get_success">获取成功</string>
    <string name="weibo_get_fail">获取失败</string>
    <string name="weibo_geting">正在获取好友列表...</string>
    <string name="weibo_logining">登录中...</string>
    <string name="weibo_tip_title">提示</string>
    <string name="cg_comment_success">评论成功， 谢谢！</string>
    <string name="cg_comment_fail">评论失败！</string>
    <string name="gps_error">GPS 不可用，请检查网络设置。</string>
    <string name="weibo_sending">发送中...</string>
    <string name="weibo_fasong">发送</string>
    <string name="weibo_content_same_error">发送失败，请检查内容是否和上一条相同。</string>
    <string name="weibo_content_null_error">发送失败，您是否忘记了输入内容？</string>
    <string name="weibo_send_error">发送失败</string>
    <string name="weibo_send_again">,请重新发送</string>
    <string name="weibo_content_tip">到此一游！【来自 @TouchChina】</string>
    <string name="sg_traffic_please">您好，请送我去</string>
    <string name="sg_traffic_thanks">谢谢!</string>
    <string name="sg_tab_button_name_around">周边概况</string>
    <string name="sg_tab_button_name_taxi">出租车</string>
    <string name="sg_tab_button_name_info">交通详情</string>
    <string name="tc_exit_question">您确定要离开吗？</string>
    <string name="tc_exit_ok">确定</string>
    <string name="tc_exit_cancel">取消</string>
    <string name="sg_album">景区相册</string>
    <string name="sg_photos">张相片</string>
    <string name="sg_location_bad">定位不可用</string>
    <string name="sg_audio_error">您的系统暂时不支持此音频格式</string>
    <string name="sdcard_error">存储卡未连接，请检查</string>
    <string name="sdcard_setting">存储卡设置</string>
    <string name="sdcard_not_free">您的外部存储卡空间不足，请检查</string>
    <string name="system_memory_low">您的系统内存不足...</string>
    <string name="sdcard_unzip">您的外部存储卡空间不足，可能引起解压安装失败</string>
    <string name="attract_name">景点</string>
    <string name="info_name">信息</string>
    <string name="restroom_name">洗手间</string>
    <string name="diner_name">小卖部</string>
    <string name="ticket_name">售票处</string>
    <string name="landmark_name">Fairmont Hotel</string>
    <string name="gallery_name">画廊</string>
    <string name="cafe_name">咖啡店</string>
    <string name="restaurant_name">饭馆</string>
    <string name="museum_name">展览馆</string>
    <string name="bookstore_name">书店</string>
    <string name="bar_name">酒吧</string>
    <string name="shopping_name">购物</string>
    <string name="store_name">纪念品</string>
    <string name="subway_name">地铁站</string>
    <string name="theater_name">剧场</string>
    <string name="hotel_name">住宿</string>
    <string name="bestshot_name">最佳摄影点</string>
    <string name="route_choice">线路选择</string>
    <string name="icon_filter">图标过滤</string>
    <string name="button_setting">按钮设置</string>
    <string name="button_zoom">缩放按钮</string>
    <string name="weibo_login_name">微博登录名</string>
    <string name="weibo_login_name_hint">示例@sina.com</string>
    <string name="weibo_login_password">微博密码</string>
    <string name="weibo_login_password_hint">必需</string>
    <string name="sg_input_to_search">输入景点名称搜索</string>
    <string name="util_net_error">网络连接错误，请检查网络设置</string>
    <string name="util_net_config">无法连接网络，请检查网络设置</string>
    <string name="util_net_button_config">网络设置</string>
    <string name="util_net_button_exit">取消</string>
    <string name="util_choice_image">请选择图片</string>
    <string name="util_choice_please">请选择</string>
    <string name="YiWanCheng">已完成</string>
    <string name="DaoLanZhongXin">导览中心</string>
    <string name="ZhengZaiXiaZai">正在下载</string>
    <string name="GengXin">更新</string>
    <string name="JuHao">。</string>
    <string name="QueDingYaoShanChuZheGeJingDianMa">确定要删除这个景点吗？</string>
    <string name="ShanChuZhong">删除中…</string>
    <string name="ShanChuSuoXuan">删除所选</string>
    <string name="cg_update_download">确定</string>
    <string name="cg_update_cancle">取消</string>
    <string name="waiting">等待中……</string>
    <string name="ZanTingSuoXuan">暂停所选</string>
    <string name="cg_welcome">欢迎</string>
    <string name="cg_pinjie">请下载最新</string>
    <string name="cg_pinjie1">城市导游数据</string>
    <string name="cg_download">下载</string>
    <string name="cg_update_text">更新</string>
    <string name="KaiShiSuoYouWeiWanChengXiaZai">开始所有未完成下载？</string>
    <string name="KaiShiQuanBu">开始全部</string>
    <string name="ZanTing">暂停</string>
    <string name="YiZanTing">已暂停</string>
    <string name="ZhengZaiJieYa">正在解压</string>
    <string name="jieyawancheng">解压完成</string>
    <string name="JiXuXiaZai">继续</string>
    <string name="YiXiaZai">已下载</string>
    <string name="XiaZaiZhong">下载中</string>
    <string name="weibo_fanhui">返回</string>
    <string name="weibo_text">新浪微博</string>
    <string name="weibo_weidenglu">未登录</string>
    <string name="dianjizhuceweibo">点击查看如何注册新浪微博</string>
    <string name="weibo">微博</string>
    <string name="weibo_yonghuming">用户名:</string>
    <string name="weibo_mima">密码:</string>
    <string name="SouSuo">搜索</string>
    <string name="GongLue">攻略</string>
    <string name="JieShao">介绍</string>
    <string name="YuYinGuShi">语音故事</string>
    <string name="quedingtuichuma">取消下载将无法启动程序</string>
    <string name="chulizhong">处理中,请稍候...</string>
    <string name="shifouquexiaoxiazai">是否取消下载？</string>
    <string name="wangluoyichang">网络异常,是否重试 ?</string>
    <string name="try_again">重试</string>
    <string name="cg_news_all">资 讯</string>
    <string name="cg_news">资讯和画报</string>
    <string name="cg_news_dazhe">打 折</string>
    <string name="cg_news_discount">打折</string>
    <string name="cg_news_huabao">画 报</string>
    <string name="phone_number">电话 :</string>
    <string name="cg_news_dialog_fail">加载失败,请稍后重试...</string>
    <string name="about_copyright">版权信息</string>
    <string name="about_screet">隐私条款</string>
    <string name="more_app">精彩推荐</string>
    <string name="more_share_first">我刚刚安装了TouchChina的</string>
    <string name="more_share_last">你也来看看吧!</string>
    <string name="about">关于</string>
    <string name="feed_back_email">您的邮箱地址 (选填,以便我们回复)</string>
    <string name="feed_back_suggest">您的建议</string>
    <string name="feed_back_check_email">您输入的邮箱地址不正确,请重新输入</string>
    <string name="feed_back_check_content">反馈内容不能为空,请输入反馈内容</string>
    <string name="feed_back">用户反馈信息</string>
    <string name="screet">隐私条款</string>
    <string name="version">版本</string>
    <string name="tc_banquan">TouchChina2012 保留一切权利。</string>
    <string name="get_more_info">正在获取数据...</string>
    <string name="check_for_update">正在检查数据更新...</string>
    <string name="have_data_for_update">有最新的数据包</string>
    <string name="is_for_update">,是否更新?</string>
    <string name="update_rightnow">立即更新</string>
    <string name="cg_new_data_download">导览最新数据下载</string>
    <string name="cg_update_text_toast">您的数据已是最新版本</string>
    <string name="cg_more_update_notification">正在下载</string>
    <string name="cg_more_data_downloading">更新中，请稍后再试</string>
    <string name="news_weibo_share">使用新浪微博分享</string>
    <string name="news_email_share">使用E-mail分享</string>
    <string name="news_cancle_share">取消</string>
    <string name="wancheng">完成</string>
    <string name="shangwu">上午</string>
    <string name="xiawu">下午</string>
    <string name="Login">登录</string>
    <string name="Register">新用户注册</string>
    <string name="confirm">提交</string>
    <string name="confirmInfo">单击“提交”即表示同意TouchChina的</string>
    <string name="YinSiZhengCe">隐私政策</string>
    <string name="and">和</string>
    <string name="ShiYongTiaoKuan">使用条款</string>
    <string name="notRegister">尚未注册</string>
    <string name="tab_button_name_comment">评论广场</string>
    <string name="NinKeShiYong">您可使用</string>
    <string name="XinLang_TengXun">新浪微博、腾讯微博</string>
    <string name="ZhangHaoDengLu">账号登录</string>
    <string name="nickName">昵称</string>
    <string name="email">电子邮件</string>
    <string name="psw">密码</string>
    <string name="makesure_psw">确认密码</string>
    <string name="DengLuHeZhuCe">登录和注册</string>
    <string name="welcome2TC">欢迎来到 TouchChina</string>
    <string name="community_layout_status_text1_0">剩余字数：</string>
    <string name="community_layout_status_text2">字</string>
    <string name="ReplyPingLunLe">评论回复</string>
    <string name="ForgetPSW">忘记密码？</string>
    <string name="ResetPSW1">忘记您的密码？</string>
    <string name="ResetPSW2">"没问题! 只要提供您的电子邮件地址，
我们将向您发送提供登录的临时密码。"</string>
    <string name="ResetPSW3">电子邮件</string>
    <string name="ResetPSW4">发送邮件</string>
    <string name="giveUP">放弃</string>
</resources>