<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/head_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/back" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/back" android:layout_alignParentLeft="true" />
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:id="@id/communitySquareTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DengLuHeZhuCe" android:maxEms="7" android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ScrollView android:background="@drawable/login_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip">
            <Spinner android:id="@id/login_account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NinKeShiYong" />
                <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:text="@string/XinLang_TengXun" />
                <TextView android:textSize="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ZhangHaoDengLu" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_rounded_rectangle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <EditText android:textAppearance="@android:style/TextAppearance.Medium.Inverse" android:id="@id/login_email" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="@string/email" android:singleLine="true" />
                <View android:background="#ff828282" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" />
                <EditText android:textAppearance="@android:style/TextAppearance.Medium.Inverse" android:id="@id/login_psw" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="@string/psw" android:password="true" android:singleLine="true" />
            </LinearLayout>
            <Button android:textAppearance="@android:style/TextAppearance.Medium" android:textColor="#ffffffff" android:id="@id/login" android:background="@drawable/login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/Login" android:shadowColor="#ff000000" android:shadowDy="-1.0" android:shadowRadius="1.0" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/community_login_regist">
                <TextView android:textColor="#ff999aa8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notRegister" android:layout_alignParentLeft="true" />
                <TextView android:textColor="#ffffffff" android:id="@id/reset_psw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ForgetPSW" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/login_register_view" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="5.0dip">
                <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <View android:background="#ff494949" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
            <Button android:textAppearance="@android:style/TextAppearance.Medium.Inverse" android:id="@id/register" android:background="@drawable/register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="10.0dip" android:text="@string/Register" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
