<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />
        <RadioGroup android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/radioGroup" android:background="@drawable/tab_bar_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@id/planRadioButton" android:tag="plan" android:layout_marginTop="1.0dip" android:text="@string/tab_button_name_plan" android:drawableTop="@drawable/tab_button_icon_plan" style="@style/tabButton" />
            <RadioButton android:id="@id/mapRadioButton" android:tag="map" android:layout_marginTop="1.0dip" android:text="@string/tab_button_name_map" android:drawableTop="@drawable/tab_button_icon_map" style="@style/tabButton" />
            <RadioButton android:id="@id/guideRadioButton" android:tag="guide" android:layout_marginTop="1.0dip" android:checked="true" android:text="@string/tab_button_name_guide" android:drawableTop="@drawable/tab_button_icon_guide" style="@style/tabButton" />
            <RadioButton android:id="@id/commentSquareRadioButton" android:tag="commentSquare" android:layout_marginTop="1.0dip" android:text="@string/tab_button_name_comment" android:drawableTop="@drawable/tab_button_icon_comment" style="@style/tabButton" />
            <RadioButton android:id="@id/moreRadioButton" android:tag="more" android:layout_marginTop="1.0dip" android:text="@string/tab_button_name_more" android:drawableTop="@drawable/tab_button_icon_more" style="@style/tabButton" />
        </RadioGroup>
    </LinearLayout>
</TabHost>
