<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff1a1a1a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/head_layout" layout="@layout/cg_head_layout" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@android:style/TextAppearance.Large" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/ResetPSW1" />
            <TextView android:textSize="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/ResetPSW2" />
            <LinearLayout android:background="@drawable/shape_rounded_rectangle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip">
                <EditText android:textAppearance="?android:textAppearanceMediumInverse" android:id="@id/resetEmail" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="@string/ResetPSW3" android:ems="9" android:singleLine="true" android:inputType="textEmailAddress" />
            </LinearLayout>
            <Button android:textAppearance="@android:style/TextAppearance.Medium" android:textColor="#ffffffff" android:id="@id/reset" android:background="@drawable/reset_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/ResetPSW4" android:shadowColor="#ff000000" android:shadowDy="-1.0" android:shadowRadius="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
