<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/tab_selected" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/reply_top" android:background="@drawable/head_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/backButton" android:background="@drawable/text_button" android:layout_width="70.0dip" android:layout_height="46.0dip" android:text="@string/giveUP" android:layout_alignParentLeft="true" />
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:id="@id/reply_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ReplyPingLunLe" android:maxEms="7" android:singleLine="true" android:layout_centerInParent="true" />
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/okButton" android:background="@drawable/text_button" android:layout_width="70.0dip" android:layout_height="46.0dip" android:text="@string/wancheng" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/reply_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/community_normal_wordcount" android:id="@id/reply_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/community_layout_status_text2" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/community_normal_wordcount" android:id="@id/reply_leftcount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="140" android:layout_toLeftOf="@id/reply_text2" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/community_normal_wordcount" android:id="@id/reply_text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/community_layout_status_text1_0" android:layout_toLeftOf="@id/reply_leftcount" android:layout_centerVertical="true" />
    </RelativeLayout>
    <EditText android:gravity="top|left|center" android:id="@id/reply_content" android:background="@drawable/shape_rounded_rectangle" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_above="@id/reply_bottom" android:layout_below="@id/reply_top" />
</RelativeLayout>
